--- a/index.html
+++ b/index.html
@@ -35,8 +35,13 @@
     <!--main-->
     <main>
         <section class="hero">
-            <h1 class="hero__title">Just do it</h1>
             <button class="hero__button" type="button">buy me</button>
+        </section>
+        <section class="box__thumb">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
         </section>
     </main>
 </body>
